apps/telegram-server/overlays/prod/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: telegram-server
  namespace: telegram-server-prod
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway-system
  hostnames:
    - telegram-server.home.arpa
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: telegram-server
          port: 8000
